--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "letticiamoura.github.io/clinica",
+  "homepage": "letticiamoura.github.io/clinica/",
   "name": "clinica",
   "private": true,
   "version": "0.0.0",
